adding style and streamlit app

--- a/WDF/css/style.css
+++ b/WDF/css/style.css
@@ -1,11 +1,11 @@
 body {
     color: #fff;
-    background-color: #4F8BF9;
+    background-color: #d9c5ab;
 }
 
 .css-1wrcr25{
     color: #fff;
-    background-color: #4F8BF9;
+    background-color: #d9c5ab;
 }
 
 
