--- a/WDF/templates/index.html
+++ b/WDF/templates/index.html
@@ -146,7 +146,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
 </form>
 
                       <div class="home_title">Quel est votre mood du jour?</div>
-                      <div class="home_subtitle">Summer Wear</div>
+                      <div class="home_subtitle">{{sentence}}</div>
                       <div class="home_items">
                         <div class="row">
                           <div class="col-sm-3 offset-lg-1">
@@ -494,7 +494,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
                       <div><div><img src="static/images/heart_2.svg" class="svg" alt=""><div>+</div></div></div>
                     </div>
                     <div class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
-                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[1]}}"></a><img src="static/images/cart.svg" class="svg" alt=""><div>+</div></div></div>
+                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[1]}}"><img src="static/images/cart.svg" class="svg" alt=""></a><div>+</div></div></div>
                     </div>
                   </div>
                 </div>
@@ -525,7 +525,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
                       <div><div><img src="static/images/heart_2.svg" class="svg" alt=""><div>+</div></div></div>
                     </div>
                     <div class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
-                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[2]}}"></a><img src="static/images/cart.svg" class="svg" alt=""><div>+</div></div></div>
+                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[2]}}"><img src="static/images/cart.svg" class="svg" alt=""></a><div>+</div></div></div>
                     </div>
                   </div>
                 </div>
@@ -556,7 +556,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
                       <div><div><img src="static/images/heart_2.svg" class="svg" alt=""><div>+</div></div></div>
                     </div>
                     <div class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
-                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[3]}}"></a><img src="static/images/cart.svg" class="svg" alt=""><div>+</div></div></div>
+                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[3]}}"><img src="static/images/cart.svg" class="svg" alt=""></a><div>+</div></div></div>
                     </div>
                   </div>
                 </div>
@@ -587,7 +587,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
                       <div><div><img src="static/images/heart_2.svg" class="svg" alt=""><div>+</div></div></div>
                     </div>
                     <div class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
-                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[4]}}"></a><img src="static/images/cart.svg" class="svg" alt=""><div>+</div></div></div>
+                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[4]}}"><img src="static/images/cart.svg" class="svg" alt=""></a><div>+</div></div></div>
                     </div>
                   </div>
                 </div>
@@ -618,7 +618,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
                       <div><div><img src="static/images/heart_2.svg" class="svg" alt=""><div>+</div></div></div>
                     </div>
                     <div class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
-                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[5]}}"></a><img src="static/images/cart.svg" class="svg" alt=""><div>+</div></div></div>
+                      <div><div><a href="https://www.wedressfair.fr/collections/{{slug_rec[5]}}"><img src="static/images/cart.svg" class="svg" alt=""></a><div>+</div></div></div>
                     </div>
                   </div>
                 </div>
