--- a/WDF/templates/index.html
+++ b/WDF/templates/index.html
@@ -145,7 +145,7 @@ href="{{ url_for('static', filename='styles/responsive.css') }}"
     <input type="submit" id="cool" class="coupon_but">
 </form>
 
-                      <div class="home_title">Quel est votre mood du jour?</div>
+                      <div class="home_title">Que cherchez vous?</div>
                       <div class="home_subtitle">{{sentence}}</div>
                       <div class="home_items">
                         <div class="row">
